--- a/index.html
+++ b/index.html
@@ -11,11 +11,35 @@
      <!--Font Awesome cdn-->
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-     
+
 
 
  </head>
  <body>
     
- </body>
- </html>
+ <body>
+  <!--Banner section start here-->
+  <div class="parent_div flex justify-between border-2 border-red-500 min-h-[200px] max-w-[1250px] mx-auto">
+
+    <div class="left_div border-2 border-green-500">
+      <h1 class="text-[80px] font-bold">It's a good <br/> tea time at The <br/> Tea House</h1>
+      <p class="text-[18px] my-10">Tea and Botanical Solutions Supplier Give Optimum <br/> Satisfaction To Your Taste Buds</p>
+      <button class="w-[200px] text-xl text-white h-[64px] rounded-lg bg-red-500">Explore More</button>
+    </div>
+
+    <div class="right_div border-2 border-blue-500">
+      <img src="./images/banner.png" alt="">
+      <div class="flex items-center w-[255px] h-[100px] rounded-lg shadow-md">
+        <span class="text-4xl">
+          <i class="fa-solid fa-star"></i>
+        </span>
+        <div class="ml-4">
+          <p class="text-4xl font-bold">5.00</p>
+          <p>Trust Pilot Rating</p>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</body>
+  </html>
