--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="left_div border-2 border-green-500">
       <h1 class="text-[80px] font-bold">It's a good <br/> tea time at The <br/> Tea House</h1>
       <p class="text-[18px] my-10">Tea and Botanical Solutions Supplier Give Optimum <br/> Satisfaction To Your Taste Buds</p>
-      <button class="w-[200px] text-xl text-white h-[64px] rounded-lg bg-red-500">Explore More</button>
+      <button class="w-[200px] text-xl text-white h-[64px] rounded-lg bg-gradient-to-r from-[#ff8938] to-[#ff0000]">Explore More</button>
     </div>
 
     <div class="right_div border-2 border-blue-500">
