--- a/index.html
+++ b/index.html
@@ -15,21 +15,20 @@
 
 
  </head>
- <body>
     
  <body>
   <!--Banner section start here-->
-  <div class="parent_div flex justify-between border-2 border-red-500 min-h-[200px] max-w-[1250px] mx-auto">
+  <div class="parent_div flex justify-between  min-h-[200px] max-w-[1250px] mx-auto">
 
-    <div class="left_div border-2 border-green-500">
+    <div class="left_div ">
       <h1 class="text-[80px] font-bold">It's a good <br/> tea time at The <br/> Tea House</h1>
       <p class="text-[18px] my-10">Tea and Botanical Solutions Supplier Give Optimum <br/> Satisfaction To Your Taste Buds</p>
-      <button class="w-[200px] text-xl text-white h-[64px] rounded-lg bg-gradient-to-r from-[#ff8938] to-[#ff0000]">Explore More</button>
+      <button class="w-[200px] text-xl text-white h-[64px] rounded-lg bg-gradient-to-r from-[#ff8938] to-[#ff0000]">Explore More<span><i class="fa-solid fa-arrow-right -rotate-45"></i></span></button>
     </div>
 
-    <div class="right_div border-2 border-blue-500">
-      <img src="./images/banner.png" alt="">
-      <div class="flex items-center w-[255px] h-[100px] rounded-lg shadow-md">
+    <div class="right_div relative ">
+      <img src="./images/banner.png" class="relative top-[117px]" alt="">
+      <div class="flex items-center bg-white w-[255px] h-[100px] rounded-lg shadow-md absolute left-[95px]">
         <span class="text-4xl">
           <i class="fa-solid fa-star"></i>
         </span>
