updated banner layout to be responsive for mobile and desktop screens

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     
  <body>
   <!--Banner section start here-->
-  <div class="parent_div flex justify-between  min-h-[200px] max-w-[1250px] mx-auto">
+  <div class="parent_div flex flex-col md:flex-row justify-between  min-h-[200px] max-w-[1250px] mx-auto">
 
     <div class="left_div ">
       <h1 class="text-[80px] font-bold">It's a good <br/> tea time at The <br/> Tea House</h1>
