--- a/index.html
+++ b/index.html
@@ -38,7 +38,48 @@
         </div>
       </div>
     </div>
+  </div>
+
+
+ <!-- Features section start here -->
+<section class="min-h-[200px] max-w-[1250px] mx-auto mt-[100px]">
+  <h1 class="text-5xl text-center">Our Featured Products</h1>
+  <p class="text-center my-10">
+    There are many variations of passages of lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.
+  </p>
+
+  <div class="featured_parent grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 min-h-[200px]">
+
+    <!-- Milk Tea (Card 01) -->
+    <div class="featured_card bg-gradient-to-b from-[#f4f4f4] to-[#f4f4f400] min-h-[300px] text-center p-4 rounded-lg">
+      <img src="./images/tea-1.png" class="mx-auto block" alt="">
+      <h1 class="text-2xl font-bold">Milk Tea</h1>
+      <p>Creamer could be replaced by fresh milk.</p>
+    </div>
+
+    <!-- Black Tea (Card 02) -->
+    <div class="featured_card bg-gradient-to-b from-[#f4f4f4] to-[#f4f4f400] min-h-[300px] text-center p-4 rounded-lg">
+      <img src="./images/tea-2.png" class="mx-auto block" alt="">
+      <h1 class="text-2xl font-bold">Black Tea</h1>
+      <p>Creamer could be replaced by fresh milk.</p>
+    </div>
+
+    <!-- Lemon Tea (Card 03) -->
+    <div class="featured_card bg-gradient-to-b from-[#f4f4f4] to-[#f4f4f400] min-h-[300px] text-center p-4 rounded-lg">
+      <img src="./images/tea-3.png" class="mx-auto block" alt="">
+      <h1 class="text-2xl font-bold">Lemon Tea</h1>
+      <p>Creamer could be replaced by fresh milk.</p>
+    </div>
+
+    <!-- Green Tea (Card 04) -->
+    <div class="featured_card bg-gradient-to-b from-[#f4f4f4] to-[#f4f4f400] min-h-[300px] text-center p-4 rounded-lg">
+      <img src="./images/tea-4.png" class="mx-auto block" alt="">
+      <h1 class="text-2xl font-bold">Green Tea</h1>
+      <p>Creamer could be replaced by fresh milk.</p>
+    </div>
 
   </div>
+</section>
+
 </body>
   </html>
