added fresh tea section with images and responsive design

--- a/index.html
+++ b/index.html
@@ -81,5 +81,21 @@
   </div>
 </section>
 
+
+<!-- Great Tea Fresh Tea Section -->
+
+ <section class="p-5 my-24 flex flex-col lg:flex-row gap-12 pt-12">
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-8 flex-1">
+       <div class="rounded-xl h-36 bg-gradient-to-r from-[#f80] to-[#FF8938] opacity-10"></div>
+       <div class="row-span-2 bg-[#E6A6231A] rounded-lg px-8 py-12 flex justify-center items-center">
+                    <img src="./images/fresh-1.png" alt="">
+     </div>
+    <div class="row-span-2 bg-[#394C1A1A] rounded-lg px-8 py-12 flex justify-center items-center">
+                   <img src="./images/fresh-2.png" alt="">
+    </div>
+    <div class="rounded-xl h-36 bg-gradient-to-r from-[#D9D9D9] to-[#FFFFFF00]"></div>
+     </div>
+ </section>  
+
 </body>
   </html>
