--- a/index.html
+++ b/index.html
@@ -95,6 +95,26 @@
     </div>
     <div class="rounded-xl h-36 bg-gradient-to-r from-[#D9D9D9] to-[#FFFFFF00]"></div>
      </div>
+
+
+     <div class="space-y-5 flex-1">
+                <h3 class="text-5xl font-extrabold text-black">Great Tea, Freshly<br> Presented</h3>
+                <p class="text-base font-medium text-[#777]">
+                    The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It
+                    represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply
+                    appreciated by its custoers because of good words of mouth and unique customized service orginated
+                    from Taiwan.
+
+                </p>
+                <h4 class="text-xl font-extrabold mt-8">Unique Taste</h4>
+                <p class="text-base font-medium text-[#777]">
+                    A Unique and different style from other teapots gives a luxurious and minimalist impression
+                </p>
+                <h4 class="text-xl font-extrabold">Premium Quality</h4>
+                <p class="text-base font-medium text-[#777]">
+                    Premium Quality that makes tea more elegant and more durable when you use it.
+                </p>
+            </div>
  </section>  
 
 </body>
