--- a/index.html
+++ b/index.html
@@ -117,5 +117,29 @@
             </div>
  </section>  
 
+
+         <!-- Super Client Section -->
+        <section
+            class="p-5 my-24 rounded-xl bg-gradient-to-r from-[#FF8913] to-[#f00] px-16 py-24 flex flex-col lg:flex-row gap-12">
+
+            <div class="flex items-center lg:pr-28">
+                <div class="space-y-5">
+                    <h2 class="text-5xl font-extrabold text-white">
+                        Meet Our Super <br>
+                        Clients
+                    </h2>
+                    <p class="text-white pb-10">
+                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour, or randomised words which don't look even slightly
+                        believable.
+                    </p>
+                    <a href="" class="bg-white px-1 rounded-lg btn">
+                        <button
+                            class="btn text-transparent bg-clip-text bg-gradient-to-r from-[#f80] to-[#df0700] font-extrabold text-base border-0">Show
+                            All</button>
+                    </a>
+                </div>
+            </div>
+
 </body>
   </html>
