--- a/index.html
+++ b/index.html
@@ -141,5 +141,26 @@
                 </div>
             </div>
 
+            <!-- Reviews Card Section -->
+          <div class="relative py-24">
+            <!-- Middle Card -->
+            <div class="absolute z-10 top-44 md:top-52">
+              <div
+                class="h-56 w-full md:w-3/4 bg-white text-black rounded-lg flex items-center px-5"
+              >
+                <div class="absolute -top-5 -left-5 bg-white rounded-full">
+                  <img class="p-1" src="./images/client.png" alt="" />
+                </div>
+                <div>
+                  <p class="text-gray-500 mb-5">
+                    We are providing the best and suitable home insurance
+                    services for the people who are interested to treatment
+                  </p>
+                  <h1 class="font-bold">Ilham Yuda</h1>
+                  <small class="font-bold text-gray-500">Businessman</small>
+                </div>
+              </div>
+            </div>
+
 </body>
   </html>
