--- a/index.html
+++ b/index.html
@@ -202,5 +202,18 @@
       </section>
 
 
+         <!-- News & Events Section  -->
+      <section class="py-5 lg:py-10">
+        <!-- Title -->
+        <div class="text-center mb-8">
+          <h1 class="text-3xl md:text-4xl font-bold mb-5">News & Events</h1>
+          <p class="text-gray-600 max-w-3xl mx-auto">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even slightly
+            believable.
+          </p>
+        </div>
+
 </body>
   </html>
