added news and events section with three cards

--- a/index.html
+++ b/index.html
@@ -215,5 +215,61 @@
           </p>
         </div>
 
+
+           <!-- Grid Cards -->
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+          <!-- News & Events Card -->
+          <div
+            class="rounded-lg border border-slate-300 shadow-md bg-white overflow-hidden"
+          >
+            <img class="mx-auto pt-4" src="./images/news-1.png" alt="" />
+            <div class="p-4">
+              <p class="text-gray-400">Feb 05, 2027</p>
+              <h2 class="font-bold text-xl py-2 w-3/4">
+                Collecting 8 points for discount
+              </h2>
+              <p class="text-gray-600 pb-2">
+                There are many variations of passages of Lorem Ipsum available.
+              </p>
+              <a class="font-bold" href="">Learn More</a>
+            </div>
+          </div>
+          <!-- News & Events Card -->
+          <div
+            class="rounded-lg border border-slate-300 shadow-md bg-white overflow-hidden"
+          >
+            <img class="mx-auto pt-4" src="./images/news-2.png" alt="" />
+            <div class="p-4">
+              <p class="text-gray-400">Feb 05, 2027</p>
+              <h2 class="font-bold text-xl py-2 w-3/4">
+                Collecting 8 points for discount
+              </h2>
+              <p class="text-gray-600 pb-2">
+                There are many variations of passages of Lorem Ipsum available.
+              </p>
+              <a class="font-bold" href="">Learn More</a>
+            </div>
+          </div>
+          <!-- News & Events Card -->
+          <div
+            class="rounded-lg border border-slate-300 shadow-md bg-white overflow-hidden"
+          >
+            <img class="mx-auto pt-4" src="./images/news-3.png" alt="" />
+            <div class="p-4">
+              <p class="text-gray-400">Feb 05, 2027</p>
+              <h2 class="font-bold text-xl py-2 w-3/4">
+                Collecting 8 points for discount
+              </h2>
+              <p class="text-gray-600 pb-2">
+                There are many variations of passages of Lorem Ipsum available.
+              </p>
+              <a class="font-bold" href="">Learn More</a>
+            </div>
+          </div>
+        </div>
+      </section>
+       </main>
+
 </body>
   </html>
+
