--- a/index.html
+++ b/index.html
@@ -289,6 +289,59 @@
         <!-- Links -->
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
 
+
+          <!-- first column -->
+          <div>
+            <h3 class="font-semibold text-lg mb-3">Quick Links</h3>
+            <ul class="space-y-2">
+              <li>
+                <a class="hover:text-orange-600" href="#">Home</a>
+              </li>
+              <li>
+                <a class="hover:text-orange-600" href="#">Insurance</a>
+              </li>
+              <li>
+                <a class="hover:text-orange-600" href="#">About</a>
+              </li>
+              <li>
+                <a class="hover:text-orange-600" href="#">Privacy Policy</a>
+              </li>
+            </ul>
+          </div>
+
+<!-- second column -->
+          <div>
+            <h3 class="font-semibold text-lg mb-3">Our Services</h3>
+            <ul class="space-y-2">
+              <li>
+                <a class="hover:text-orange-600" href="#">Insurance</a>
+              </li>
+              <li>
+                <a class="hover:text-orange-600" href="#">About</a>
+              </li>
+              <li>
+                <a class="hover:text-orange-600" href="#">Privacy Policy</a>
+              </li>
+              <li>
+                <a class="hover:text-orange-600" href="#">Privacy Policy</a>
+              </li>
+            </ul>
+          </div>
+          
+          <!-- third column -->
+          <div>
+            <h3 class="font-semibold text-lg mb-3">Help</h3>
+            <ul class="space-y-2">
+              <li>
+                <a class="hover:text-orange-600" href="#">Home</a>
+              </li>
+              <li>
+                <a class="hover:text-orange-600" href="#">Insurance</a>
+              </li>
+            </ul>
+          </div>
+
+
 </body>
   </html>
 
